--- a/views/teacher_form.ejs
+++ b/views/teacher_form.ejs
@@ -36,11 +36,11 @@
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="number" class="form-control" name="registration" id="registration" placeholder="Registration No" minlength=4 data-msg="Please enter at least 8 digits" required/>
+                  <input type="number" class="form-control" name="registration" id="registration" placeholder="Registration No" min=1000 data-msg="Please enter at least 8 digits" required/>
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                        <input type="number" class="form-control" name="mobile" id="mobile" placeholder="Mobile" minlength="10" data-msg="Please enter valid mobile number" required/>
+                        <input type="number" class="form-control" name="mobile" id="mobile" placeholder="Mobile" minlength=1000000000 max=9999999999 data-msg="Please enter valid mobile number" required/>
                         <div class="validation"></div>
                 </div>
                 <div class="form-group">
