--- a/views/teacher_form.ejs
+++ b/views/teacher_form.ejs
@@ -28,7 +28,7 @@
               <div id="errormessage"></div>
               <form action="/add_teacher" method="POST" role="form" class="contactForm">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" required/>
+                  <input type="text" name="username" class="form-control" id="name" placeholder="Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" required/>
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
@@ -51,7 +51,7 @@
                         <input type="password" class="form-control" name="password" id="password" placeholder="Password"/>
                         <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit" class="btn btn-primary btn-lg">Add Student</button></div>
+                <div class="text-center"><button type="submit" class="btn btn-primary btn-lg">Add Teacher</button></div>
               </form>
             </div>
           </div>
