--- a/views/student_form.ejs
+++ b/views/student_form.ejs
@@ -28,7 +28,7 @@
               <div id="errormessage"></div>
               <form action="/add_student" method="POST" role="form" enctype="multipart/form-data" class="contactForm">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" required/>
+                  <input type="text" name="username" class="form-control" id="name" placeholder="Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" required/>
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
